<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/select_shuttle_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/txt_select_shuttle"/>

   <!--
       Left Column
    -->
    
    <CheckBox
        android:id="@+id/cb_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/select_shuttle_text"
        android:layout_marginTop="30dp"
        android:text="@string/txt_cb_all"
        />

    <CheckBox
        android:id="@+id/cb_evanston_intercampus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cb_all"
        android:layout_below="@+id/cb_all"
        android:layout_marginTop="30dp"
        android:text="@string/txt_cb_evanston_inter"
        />

    <CheckBox
        android:id="@+id/cb_chicago_intercampus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cb_all"
        android:layout_below="@+id/cb_evanston_intercampus"
        android:layout_marginTop="30dp"
        android:text="@string/txt_cb_chicago_inter"
        />


    <CheckBox
        android:id="@+id/cb_frostbite_express"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cb_chicago_intercampus"
        android:layout_alignLeft="@+id/cb_chicago_intercampus"
        android:layout_centerVertical="true"
        android:layout_marginTop="30dp"
        android:text="@string/txt_cb_frostbite_express"
        />
    
    <CheckBox
        android:id="@+id/cb_chicago_express_saturday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/cb_evanston_intercampus"
        android:layout_below="@+id/cb_frostbite_express"
        android:layout_marginTop="30dp"
        android:text="@string/txt_cb_chicago_express_saturday" />
    
    <!--
       Right Column
    -->

    <CheckBox
        android:id="@+id/cb_shop_n_ride"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/cb_frostbite_sheridan"
        android:layout_marginTop="27dp"
        android:text="@string/txt_cb_shop_n_ride" />

    <CheckBox
        android:id="@+id/cb_frostbite_sheridan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cb_shop_n_ride"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/cb_frostbite_express"
        android:text="@string/txt_cb_frostbite_sheridan" />

    <CheckBox
        android:id="@+id/cb_ryan_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cb_frostbite_express"
        android:layout_alignLeft="@+id/cb_campus_loop"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/cb_chicago_intercampus"
        android:text="@string/txt_cb_ryan_field" />

    <CheckBox
        android:id="@+id/cb_campus_loop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cb_frostbite_sheridan"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/cb_evanston_intercampus"
        android:text="@string/txt_campus_loop" />

    <CheckBox
        android:id="@+id/cb_evanston_loop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cb_campus_loop"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/cb_all"
        android:text="@string/txt_evanston_loop" />

    <Button
        android:id="@+id/button_select_shuttles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/txt_button_select_shuttles" />

</RelativeLayout>
