<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/from_location_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/txt_from"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/spin_start_location"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/from_location_id" />

   <TextView
       android:id="@+id/to_location_id"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_above="@+id/spin_end_location"
       android:layout_alignLeft="@+id/spin_end_location"
       android:text="@string/txt_to"
       android:textAppearance="?android:attr/textAppearanceMedium" />
 
	<Spinner
        android:id="@+id/spin_end_location"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/spin_start_location" />

   <Button
       android:id="@+id/button_continue_to_shuttle_screen"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@+id/spin_start_location"
       android:layout_centerHorizontal="true"
       android:layout_marginTop="25dp"
       android:onClick="onContinueToShuttlesButtonClicked"
       android:text="@string/txt_button_select_shuttles" />

</RelativeLayout>
