<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/from_location_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/txt_from"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/spin_start_location"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/from_location_id" />

   <TextView
       android:id="@+id/to_location_id"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_above="@+id/spin_end_location"
       android:layout_alignParentRight="true"
       android:text="@string/txt_to"
       android:textAppearance="?android:attr/textAppearanceMedium" />
 
	<Spinner
        android:id="@+id/spin_end_location"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/spin_start_location" />

  <ListView
      android:id="@android:id/list"
      android:layout_width="wrap_content"
      android:layout_height="50dp"
      android:layout_alignParentBottom="true"
      android:layout_alignParentLeft="true"
      android:layout_below="@+id/results_header" >
	</ListView>
	
	<TextView
	    android:id="@id/android:empty"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:gravity="center"
	    android:text="Click search to see shuttle availabilty"
	    android:textAppearance="?android:attr/textAppearanceMedium"
	    android:textStyle="italic" />

  <Button
      android:id="@+id/search_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/spin_start_location"
      android:layout_centerHorizontal="true"
      android:text="@string/txt_search_button" />

  <ImageButton
      android:id="@+id/switch_button"
      style="?android:attr/buttonStyleSmall"
      android:layout_width="25dp"
      android:layout_height="25dp"
      android:layout_alignBottom="@+id/from_location_id"
      android:layout_centerHorizontal="true"
      android:background="@android:color/transparent"
      android:src="@drawable/switch_locations" />

  <TextView
      android:id="@+id/results_header"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/search_button"
      android:layout_centerHorizontal="true"
      android:text="@string/txt_description_header"
      android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>